Added more logic to templates. Now has an exclusion list for terms. Allows choosing from Human names.